create service 'Blog': start

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -3,8 +3,30 @@
 <head>
     <meta charset="UTF-8">
     <title>GreenWay</title>
+    <link href="static/css/style.css" rel="stylesheet" th:href="@{/css/style.css}" type="text/css">
 </head>
 <body>
-<p th:text="'Hello ' + ${title} + '!'"></p>
+    <div class="wrapper">
+        <header class="header">
+            <div class="header_container">
+                <div class="header_nav">
+                    <a href="#" class="logo-link"><img class="logo" src="/static/img/logo.svg"></a>
+                    <nav class="nav">
+                        <ul class="menu">
+                            <li><a href="#" class="nav-link">Частным лицам</a></li>
+                            <li><a href="#" class="nav-link">Бизнесу</a></li>
+                            <li><a href="#" class="nav-link">Помощь</a></li>
+                        </ul>
+                    </nav>
+                    <div class="profile_block">
+                        <a href="#" class="profile-link">username</a>
+                        <a href="#" class="profile-link">
+                            <img src="/static/img/default-avatar.svg" class="avatar-mini">
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </header>
+    </div>
 </body>
 </html>
