--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -12,6 +12,7 @@ html, body {
 
 .header_container {
     margin: 0 360px;
+    padding-top: 48px;
 }
 
 .header_nav {
@@ -27,6 +28,7 @@ html, body {
 .menu {
     display: flex;
     list-style: none;
+    column-gap: 50px;
 }
 
 .nav-link {
@@ -44,4 +46,69 @@ html, body {
 .avatar-mini {
     width: 50px;
     height: 50px;
+}
+
+/* Main */
+
+.main_container {
+    margin: 0 360px;
+}
+
+/* form Article */
+
+.form_block {
+    padding: 30px 40px;
+    width: 400px;
+    background-color: #1CAA54;
+    border-radius: 10px;
+}
+
+input {
+    font-size: 16px;
+    height: 35px;
+    width: 100%;
+    border-radius: 5px;
+    border: 2px solid white;
+}
+
+textarea {
+    font-size: 16px;
+    margin-top: 20px;
+    height: 50px;
+    width: 100%;
+    resize: none;
+    border-radius: 5px;
+    border: 2px solid white;
+}
+
+.btn {
+    margin-top: 30px;
+    height: 45px;
+    width: 100%;
+    border-radius: 5px;
+}
+
+/* Articles */
+
+.a-detail {
+    display: inline-block;
+    transition: transform 0.3s ease;
+}
+
+.a-detail:hover {
+    transform: scale(1.2);
+    text-decoration: none;
+}
+
+.card {
+    padding: 5px 20px;
+    margin: auto;
+    height: 150px;
+    width: 550px;
+    border-radius: 10px;
+    background-color: #1CAA54;
+}
+
+.card span {
+    font-size: 30px;
 }
