--- a/src/main/resources/templates/create-article.html
+++ b/src/main/resources/templates/create-article.html
@@ -1,10 +1,26 @@
 <!DOCTYPE html>
-<html lang="en">
+<html xmlns:th="www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Добавление статьи</title>
+    <link href="static/css/style.css" rel="stylesheet" th:href="@{/css/style.css}" type="text/css">
 </head>
 <body>
+    <div class="wrapper">
+        <header th:insert="blocks/header :: header" class="header"></header>
 
+        <main class="main">
+            <div class="main_container">
+                <div class="form_block">
+                    <h3 >Добавление статьи</h3>
+                    <form action="/blog/create-article" method="post">
+                        <input type="text" name="title" placeholder="Название статьи"><br>
+                        <textarea name="text" placeholder="Текст статьи"></textarea><br>
+                        <button class="btn" type="submit">Добавить статью</button>
+                    </form>
+                </div>
+            </div>
+        </main>
+    </div>
 </body>
 </html>
