--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="www.thymeleaf.org">
+<html xmlns:th="www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <title>GreenWay</title>
@@ -7,26 +7,11 @@
 </head>
 <body>
     <div class="wrapper">
-        <header class="header">
-            <div class="header_container">
-                <div class="header_nav">
-                    <a href="#" class="logo-link"><img class="logo" src="/static/img/logo.svg"></a>
-                    <nav class="nav">
-                        <ul class="menu">
-                            <li><a href="#" class="nav-link">Частным лицам</a></li>
-                            <li><a href="#" class="nav-link">Бизнесу</a></li>
-                            <li><a href="#" class="nav-link">Помощь</a></li>
-                        </ul>
-                    </nav>
-                    <div class="profile_block">
-                        <a href="#" class="profile-link">username</a>
-                        <a href="#" class="profile-link">
-                            <img src="/static/img/default-avatar.svg" class="avatar-mini">
-                        </a>
-                    </div>
-                </div>
-            </div>
-        </header>
+        <header th:insert="blocks/header :: header" class="header"></header>
+        <main>
+            <a href="/blog/create-article">Создать запись</a>
+            <a href="/blog/articles">Новости</a>
+        </main>
     </div>
 </body>
 </html>
