--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,24 +1,20 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="https://www.thymeleaf.org">
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="https://www.thymeleaf.org">
 <head>
-    <meta charset="UTF-8">
-    <title>Spring Security Example</title>
+    <title>Authorization</title>
 </head>
 <body>
-    <div th:if="${param.error}">
-        Invalid firstname and password
-    </div>
-    <div th:if="${param.logout}">
-        You have been logged out
-    </div>
-    <form th:action="@{/login}" method="post">
-        <label>Username</label>
-        <input type="text" name="username"/>
-
-        <label>Password</label>
-        <input type="password" name="password"/>
-
-        <input type="submit" value="Sign In">
-    </form>
+<div th:if="${param.error}">
+    Invalid username and password.
+</div>
+<div th:if="${param.logout}">
+    You have been logged out.
+</div>
+<h1>Login page</h1>
+<form th:action="@{/login}" method="post">
+    <div><label> User Name : <input type="text" name="username"/> </label></div>
+    <div><label> Password: <input type="password" name="password"/> </label></div>
+    <div><input type="submit" value="Sign In"/></div>
+</form>
 </body>
 </html>
