create service open_account

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -12,6 +12,7 @@
             <a href="/blog/create-article">Создать запись</a>
             <a href="/blog/articles">Новости</a>
         </main>
+        <a th:href="@{/bank/open-account}">Открыть счёт</a>
     </div>
 </body>
 </html>
