fixed the broken one static

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html xmlns:th="www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <title>GreenWay</title>
-    <link href="static/css/style.css" rel="stylesheet" th:href="@{/css/style.css}" type="text/css">
+    <link rel="stylesheet" th:href="@{/static/css/style.css}" type="text/css"/>
 </head>
 <body>
     <div class="wrapper">
