--- a/src/main/resources/templates/blocks/header.html
+++ b/src/main/resources/templates/blocks/header.html
@@ -1,6 +1,6 @@
 <div th:fragment="header" class="header_container">
     <div class="header_nav">
-        <a href="/" class="logo-link"><img class="logo" th:src="@{/img/logo.svg}"></a>
+        <a href="/home" class="logo-link"><img class="logo" th:src="@{/images/logo.svg}"></a>
         <nav class="nav">
             <ul class="menu">
               <li><a href="#" class="nav-link">Частным лицам</a></li>
