service transaction: add transaction

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -12,7 +12,10 @@
             <a href="/blog/create-article">Создать запись</a>
             <a href="/blog/articles">Новости</a>
         </main>
-        <a th:href="@{/bank/open-account}">Открыть счёт</a>
+        <a th:href="@{/bank/open-account}">Открыть счёт</a><br>
+        <a href="/profile">Профиль</a><br>
+        <a href="/login">Войти</a><br>
+        <a href="/bank/execute-transaction">Перевод</a>
     </div>
 </body>
 </html>
