--- a/src/main/resources/templates/blocks/header.html
+++ b/src/main/resources/templates/blocks/header.html
@@ -8,10 +8,10 @@
               <li><a href="#" class="nav-link">Ещё</a></li>
             </ul>
         </nav>
-        <div class="profile_block">
+        <div class="profile_block_mini">
             <a href="#" class="profile-link">username</a>
             <a href="#" class="profile-link">
-                <img th:src="@{/img/default-avatar.svg}" class="avatar-mini">
+                <img th:src="@{/images/default-avatar-mini.svg}" class="avatar-mini">
             </a>
         </div>
     </div>
