--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -185,7 +185,7 @@ textarea {
 .profile_block {
     position: relative;
     margin: 0 auto;
-    height: 485px;
+    height: 890px;
     width: 730px;
     border-radius: 20px;
     background-color: #D9D9D9;
@@ -222,7 +222,41 @@ textarea {
 .all__info {
 }
 
-.all__info p {
+p {
     margin-top: 12px;
     font-size: 20px;
+}
+
+.accounts_block__btn {
+    margin-top: 30px;
+    padding: 11px 173px;
+    font-size: 45px;
+    font-weight: 500;
+    color: #000;
+    background-color: #58E236;
+    text-decoration: none;
+    border-radius: 10px;
+    box-shadow: 0px 5px 15px #000;
+}
+
+.account_card {
+    position: relative;
+    margin-top: 18px;
+    height: 104px;
+    width: 375px;
+    font-size: 20px;
+    font-weight: 500;
+    color: #000;
+    background-color: #58E236;
+    border-radius: 10px;
+    box-shadow: 0px 5px 15px #000;
+}
+
+.account_card__container {
+    position: absolute;
+    margin-left: 24px;
+}
+
+.account_card a {
+    margin-top: 19px;
 }
