--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -134,33 +134,33 @@ textarea {
     margin-top: 45px;
 }
 
-.form_login {
+.form_auth {
     position: absolute;
     margin: 31px 105px;
 }
 
-.form_login div {
+.form_auth div {
     text-align: center;
     font-size: 30px;
     font-weight: 700;
 }
 
-.form_login input {
+.form_auth input {
     height: 50px;
     width: 520px;
     border-radius: 5px;
     border: solid 1px #000;
 }
 
-.login_input_1 {
+.auth_input_1 {
     margin-top: 38px;
 }
 
-.login_input_2 {
+.auth_input {
     margin-top: 19px;
 }
 
-.form_login button {
+.form_auth button {
     margin-top: 44px;
     height: 50px;
     width: 520px;
@@ -170,6 +170,25 @@ textarea {
     border-radius: 10px;
     border: none;
     background-color: #368C18;
+}
+
+
+
+
+
+/* Registration */
+
+.form_register_block {
+    position: relative;
+    margin: 0 auto;
+    height: 557px;
+    width: 730px;
+    border-radius: 20px;
+    background-color: #D9D9D9;
+}
+
+.rb {
+    margin-top: 45px;
 }
 
 
