--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -15,6 +15,7 @@
         <a th:href="@{/bank/open-account}">Открыть счёт</a><br>
         <a href="/profile">Профиль</a><br>
         <a href="/login">Войти</a><br>
+        <a href="/registration">Регистрация</a><br>
         <a href="/bank/execute-transaction">Перевод</a>
     </div>
 </body>
