--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -16,10 +16,10 @@
         <header th:insert="blocks/header :: header" class="header"></header>
         <main>
             <div class="form_login_block lb">
-                <form th:action="@{/login}" class="form_login" method="post">
+                <form th:action="@{/login}" class="form_auth" method="post">
                     <div>Вход в GreenWay банк</div>
-                    <input class="login_input_1" type="text" name="username" placeholder="Введите имя"/>
-                    <input class="login_input_2" type="password" name="password" placeholder="Введите пароль"/>
+                    <input class="auth_input_1" type="text" name="username" placeholder="Введите имя"/>
+                    <input class="auth_input" type="password" name="password" placeholder="Введите пароль"/>
                     <button type="submit">Войти</button>
                 </form>
             </div>
