--- a/src/main/resources/templates/articles.html
+++ b/src/main/resources/templates/articles.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Новости</title>
-    <link href="static/css/style.css" rel="stylesheet" th:href="@{/css/style.css}" type="text/css">
+    <link rel="stylesheet" th:href="@{/static/css/style.css}" type="text/css"/>
 </head>
 <body>
     <div class="wrapper">
