--- a/src/main/resources/templates/execute-transaction.html
+++ b/src/main/resources/templates/execute-transaction.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
 </head>
 <body>
+    <span th:text="${error}"></span>
     <form method="post">
         <input type="number" name="amount" placeholder="Сколько">
         <input type="number" name="account_from" placeholder="От кого">
